themes/next/assets/scss/components/forms.scss
/* ... */
.form {
    h4 {
        margin-bottom: 20px;
        @include max(xxs) {
            margin-bottom: 16px;
        }
    }
    section {
        &.two-columns {
            @include min(lg) {
                display: grid;
                grid-gap: 20px 8%;
                align-items: start;
                grid-template-columns: repeat(2, minmax(0, 1fr));
                .form-element {
                    margin-bottom: 0;
                    &.full-width {
                        grid-column: 1 / 3;
                    }
                }
                h4 {
                    grid-column: 1 / 3;
                    margin-bottom: 8px;
                }
            }
        }
    }
    .form-element {
        &:last-child {
            margin-bottom: 0;
        }
    }
    .action {
        display: flex;
        .btn {
            &:not(:last-child) {
                margin-right: 16px;
                @include max(xs) {
                    margin-right: 12px;
                }
            }
        }
    }
    .logo-delete {
        img {
            display: block;
            max-width: 120px;
            max-height: 48px;
            margin-bottom: 12px;
        }
    }
    &.horizontal {
        .form-element {
            @include min(sm) {
                display: grid;
                align-items: start;
                grid-gap: 0 16px;
                grid-template-columns: 36% minmax(0, 1fr);
                min-height: 47px;
                & > label {
                    margin-top: 12px;
                    margin-bottom: 0;
                    line-height: 23px;
                    font-size: 16px;
                }
                .align-right {
                    display: flex;
                    justify-content: flex-end;
                }
                .action {
                    grid-column: 2;
                    margin-left: auto;
                    flex-direction: row-reverse;
                    .btn {
                        &:not(:last-child) {
                            margin-left: 20px;
                            margin-right: 0;
                        }
                    }
                }
                .buttons {
                    grid-column: 2;
                }
            }
            label {
                &.checkbox:first-child,
                &.checkbox.inline,
                &.radio:first-child,
                &.radio.inline,
                &.switch:first-child,
                &.switch.inline {
                    margin-top: 12px;
                    @include max(sm) {
                        margin-top: 8px;
                    }
                }
            }
        }
        &.small-value {
            .form-element {
                @include min(sm) {
                    grid-template-columns: 72% minmax(0, 1fr);
                }
            }
        }
        .logo-delete {
            img {
                @include min(sm) {
                    margin-bottom: 0;
                }
            }
        }
    }
}

.static {
    margin: 12px 0 0 0;
    line-height: 23px;
    font-size: 16px;
}
/* ... */

